Fixed spacing inside of the reasons section

--- a/css/styles.css
+++ b/css/styles.css
@@ -877,7 +877,7 @@ label,
 
 .reasons-content {
     padding-top: 88px;
-    padding-bottom: 88px;
+    padding-bottom: 72px;
 }
 
 .reasons-card {
